# astral-engine

./: .clangd  CMakeLists.txt  README.md  build.sh  debug.sh  imgui.ini  run.sh
include/: gui.h  opengl_includes.h  simulation.h  utils.h
include/graphics/: camera.h  graphics_engine.h  renderable.h  shader.h
include/physics/: physics_engine.h
resources/shaders/: base.frag  base.vert  basic.frag  basic.vert  test_cube.frag
src/: gui.cpp  main.cpp  simulation.cpp  utils.cpp
src/graphics/: camera.cpp  graphics_engine.cpp  renderable.cpp  shader.cpp
src/physics/: physics_engine.cpp
